meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report_manager__tests__heartbeat_and_sessions_report_4.test-session-all-metrics.snap
---
source: memfaultd/src/metrics/metric_report_manager.rs
expression: builder.unwrap().get_metadata()
---
{
  "type": "linux-metric-report",
  "metadata": {
    "metrics": {
      "baz": 1.5,
      "foo": 1.5
    },
    "duration_ms": 0,
    "report_type": {
      "session": "test-session-all-metrics"
    }
  }
}
